--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,8 +10,8 @@
 
     <Button
         android:id="@+id/leftButton"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
         android:background="@android:drawable/arrow_down_float"
         android:rotation="90"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,8 +20,8 @@
 
     <Button
         android:id="@+id/rightButton"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
         android:background="@android:drawable/arrow_up_float"
         android:rotation="90"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,7 +32,13 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
+        android:overScrollMode="never"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:overScrollMode="never" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
