--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,24 +23,27 @@
 
     <Button
         android:id="@+id/leftButton"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="40dp"
+        android:layout_height="64dp"
         android:alpha="0.35"
-        android:background="@android:drawable/arrow_down_float"
-        android:rotation="90"
+        android:rotation="180"
+        android:background="@drawable/arrow138_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintVertical_bias="0.498" />
 
     <Button
         android:id="@+id/rightButton"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="40dp"
+        android:layout_height="64dp"
         android:alpha="0.35"
-        android:background="@android:drawable/arrow_up_float"
-        android:rotation="90"
+        android:background="@drawable/arrow138_64"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintVertical_bias="0.498" />
 
 </android.support.constraint.ConstraintLayout>
