--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,23 +12,24 @@
         android:id="@+id/word_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/explanation_textView"
-        android:layout_alignLeft="@+id/explanation_textView"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:textColor="@android:color/black"
         android:textSize="45sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_above="@+id/explanation_textView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/explanation_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:textColor="@android:color/black"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
